manifests/northpole/gifttrack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: santadispatch
  name: gifttrack
  namespace: northpole
  labels:
    app: gifttrack
    exposed: "true"
    app.kubernetes.io/part-of: northpole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gifttrack
  template:
    metadata:
      labels:
        app: gifttrack
    spec:
      containers:
        - image: quay.io/ralvares/santa:gifttrack
          command: ["/bin/entrypoint"]
          args:
            [
              "-listen",
              ":8080",
              "-connect",
              "$(SANTADISPATCH_ADDR):$(SANTADISPATCH_PORT)",
            ]
          imagePullPolicy: Always
          name: gifttrack
          ports:
            - containerPort: 8080
              protocol: TCP
---
# Service named "gifttrack-service"
# Listens on :8080
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gifttrack
  name: gifttrack-service
  namespace: northpole
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: gifttrack
  type: ClusterIP
