manifests/northpole/gifttrack/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gifttrack 
  namespace: northpole 
  labels:
    app: gifttrack
spec:
  to:
    kind: Service
    name: gifttrack-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
